# runpod_cli_wrapper

./: .pre-commit-config.yaml  CLAUDE.md  README.md  claudes-thoughts.md  docs.md  plan.md  pyproject.toml
assets/: example_setup.sh  example_setup_local.sh
src/rp/: config.py  main.py  scheduling.py  ssh_config.py
src/rp/cli/: commands.py  utils.py
src/rp/core/: default_templates.py  models.py  pod_manager.py  scheduler.py  ssh_manager.py
src/rp/utils/: api_client.py  errors.py
src/runpod_cli_wrapper/: config.py  main.py  pods.py  scheduler.py  scheduling.py  ssh_config.py  ssh_utils.py  templates.py
src/runpod_cli_wrapper/cli/: commands.py  utils.py
src/runpod_cli_wrapper/core/: models.py  pod_manager.py  scheduler.py  ssh_manager.py
src/runpod_cli_wrapper/utils/: api_client.py
tests/: conftest.py
tests/e2e/: conftest.py  test_pod_lifecycle.py  test_scheduling.py
tests/unit/: test_cli_utils.py  test_models.py  test_remote_commands.py  test_scheduler.py
